2007-02-20  Marek Habersack  <grendello@gmail.com>

	* Patch from Gert Driesen  <drieseng@users.sourceforge.net>
	* PagesSection.cs: Process value of EnableSessionState attribute
	case-sensitive, and perform check in getter. Fix for bug #80913.
	* PageParser.cs: Added note on difference in behaviour between page
	level attribute and configuration attribute for enableSessionState.
	* PagesConfiguration.cs: Fixed compiler warning.

2007-02-22  Marek Habersack  <grendello@gmail.com>

	* CompilerCollection.cs: Optimize language lookup a bit.

2007-02-05  Konstantin Triger <kostat@mainsoft.com>

	* TagPrefixCollection.cs: Fix element key creation.

2007-02-04  Konstantin Triger <kostat@mainsoft.com>

	* NamespaceInfo.cs, HttpModuleAction.cs, RoleManagerSection.cs:
		fix the default value.

2007-02-02  Marek Habersack  <grendello@gmail.com>

	* TagPrefixCollection.cs: Add the CollectionType parameter.
	Get rid of unnecessary interface references in the class declaration.
	GetElementKey should return Source which should be unique, unlike TagPrefix.

2007-01-04  Konstantin Triger <kostat@mainsoft.com>

	* ProfileSection.cs: Ensure enabled = true by default; cleanup.

2006-12-27  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* CustomErrorCollection.cs: fixed ThrowOnDuplicate to false as in .net

2006-12-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* GlobalizationSection.cs: make encodings actually work for the 2.0
	profile.

2006-12-21  Marek Habersack  <grendello@gmail.com>

	* TagMapInfo.cs: Add an internal default constructor for use from
	TagMapCollection.

	* TagMapCollection.cs: Don't call the string,string constructor of
	TagMapInfo - the class disallows empty strings as values of its
	properties.

2006-12-21  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* RoleManagerSection.cs: refactored using attributes

2006-12-20  Marek Habersack  <grendello@gmail.com>

	* ProfilePropertyNameValidator.cs: added a few checks.
