@@ -1,3 +1,7 @@
+2007-03-06  Adar Wesley <adarw@mainsoft.com>
+
+	* PagesSection.cs: improve Enum parsing and strongly typed default values.
+
 2007-02-20  Marek Habersack  <grendello@gmail.com>
 
 	* Patch from Gert Driesen  <drieseng@users.sourceforge.net>
